# LVIDA

./: README.md  pyproject.toml
scripts/: cal_flops.py  convert_vqav2_for_submission.py  zero3.json
scripts/eval/: eval_all.sh  gqa.sh  mme.sh  mmmu.sh  mmvet.sh  pope.sh  sqa.sh  textvqa.sh  vqav2.sh
scripts/train/: launch.json
scripts/train/train_llama/: finetune_llama.sh  pretrain_llama.sh  train_llama.sh
scripts/train/train_qwen/: finetune_qwen.sh  pretrain_qwen.sh  train_qwen.sh
scripts/train/train_tinyllama/: finetune_tllama.sh  pretrain_tllama.sh  train_tinyllama.sh
scripts/train/train_vicuna/: finetune_vicuna.sh  pretrain_vicuna.sh  train_llava.sh
tinyllava/data/: dataset.py
tinyllava/data/template/: base.py  llama3_template.py  tinyllama_template.py
tinyllava/eval/: model_vqa_loader.py  model_vqa_science.py
tinyllava/model/: configuration_tinyllava.py  load_model.py  modeling_tinyllava.py
tinyllava/model/connector/: base.py
tinyllava/model/llm/: __init__.py  llama3.py  qwen.py  tinyllama.py  vicuna.py
tinyllava/model/llm/modeling_files/: modeling_llama.py  modeling_qwen2.py
tinyllava/model/vision_tower/: base.py  clip.py  hiera.py  tinyclip.py  vit_base.py
tinyllava/serve/: app.py  cli.py
tinyllava/train/: custom_finetune.py  train.py
tinyllava/training_recipe/: base.py  lora_recipe.py  qlora_recipe.py
tinyllava/utils/: logging.py
