[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LVIDA"
version = "1.0.0"
description = "Reducing Computational Complexity in Large Vision-Language Models."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2", "tiktoken", "openpyxl", "tensorboardX",
    "transformers==4.44.0", "tokenizers==0.19.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.33.0", "bitsandbytes==0.41.0", "peft==0.10.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "deepspeed==0.14.4", "ninja", "wandb",
]

[project.optional-dependencies]
train = ["deepspeed==0.14.4", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://github.com/Xuange923/LVIDA"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

